--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
       <div class="landing-page__second-section">
         <h2 class="landing-page__secondary-title">Keep track of your snippets</h2>
         <p class="landing-page__text landing-page__secondary-main-paragraph">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
-        <img src="./images/image-computer.png" alt="monitor image" class="landing-page__devices-images">
-        <h3 class="landing-page__tertiary-title">Quick Search</h3>
-        <p class="landing-page__text landing-page__search-text">Easily search your snippets by content, category, web address, application, and more.</p>
-        <h3 class="landing-page__tertiary-title">iCloud Sync</h3>
-        <p class="landing-page__text landing-page__sync-text">Instantly saves and syncs snippets across all your devices.</p>
-        <h3 class="landing-page__tertiary-title">Complete History</h3>
-        <p class="landing-page__text landing-page__history-text">Retrieve any snippets from the first moment you started using the app.</p>
+        <div class="landing-page__second-section-container">
+          <img src="./images/image-computer.png" alt="monitor image" class="landing-page__devices-images laptop-image">
+          <h3 class="landing-page__tertiary-title search-title">Quick Search</h3>
+          <p class="landing-page__text landing-page__search-text">Easily search your snippets by content, category, web address, application, and more.</p>
+          <h3 class="landing-page__tertiary-title sync-title">iCloud Sync</h3>
+          <p class="landing-page__text landing-page__sync-text">Instantly saves and syncs snippets across all your devices.</p>
+          <h3 class="landing-page__tertiary-title history-title">Complete History</h3>
+          <p class="landing-page__text landing-page__history-text">Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
       </div>
       <div class="landing-page__third-section">
         <h2 class="landing-page__secondary-title">Access Clipboard anywhere</h2>
@@ -43,7 +45,7 @@
       <div class="landing-page__fourth-section">
         <h2 class="landing-page__secondary-title">Supercharge your workflow</h2>
         <p class="landing-page__text landing-page__quaternary-main-paragraph">We’ve got the tools to boost your productivity.</p>
-        <div class="landing-page__specs-container">
+        <div class="landing-page__fourth-section-container">
           <img src="./images/icon-blacklist.svg" alt="blacklist icon" class="landing-page__icons blacklist-icon">
           <h3 class="landing-page__tertiary-title blacklist-title">Create blacklists</h3>
           <p class="landing-page__text landing-page__blacklist-text">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
@@ -56,11 +58,11 @@
         </div>
       </div>
       <div class="landing-page__fifth-section">
-        <img src="./images/logo-google.png" alt="Google logo" class="landing-page_companies-icons">
-        <img src="./images/logo-ibm.png" alt="IBM logo" class="landing-page_companies-icons">
-        <img src="./images/logo-microsoft.png" alt="Microsoft logo" class="landing-page_companies-icons">
-        <img src="./images/logo-hp.png" alt="HP logo" class="landing-page_companies-icons">
-        <img src="./images/logo-vector-graphics.png" alt="Vector Graphics logo" class="landing-page_companies-icons">
+        <img src="./images/logo-google.png" alt="Google logo" class="landing-page_companies-icons google-logo">
+        <img src="./images/logo-ibm.png" alt="IBM logo" class="landing-page_companies-icons ibm-logo">
+        <img src="./images/logo-microsoft.png" alt="Microsoft logo" class="landing-page_companies-icons microsoft-logo">
+        <img src="./images/logo-hp.png" alt="HP logo" class="landing-page_companies-icons hp-logo">
+        <img src="./images/logo-vector-graphics.png" alt="Vector Graphics logo" class="landing-page_companies-icons vector-graphics-logo">
       </div>
       <div class="landing-page__sixth-section">
         <h2 class="landing-page__secondary-title">Clipboard for iOS and Mac OS</h2>
